# QuantAb

./: .gitignore  CLAUDE.md  MEMORY.md  PLAN.md  README.md  pyproject.toml  requirements.txt
data/: README.md
quantab/: __init__.py  classical.py  data.py  embeddings.py  evaluation.py  quantum_kernels.py  visualization.py
scripts/: extract_embeddings.py  generate_figures.py  run_experiments.py
