[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quantab"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pennylane>=0.45",
    "scikit-learn",
    "polars",
    "transformers",
    "torch",
    "tqdm",
    "matplotlib",
    "seaborn",
    "scipy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["quantab*"]
